--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -21,8 +21,8 @@ liquid.returret-.description =
 block.returret-ore-mithril.name = Bijih Mithril
 
 ## Crafting
-block.returret-explantion.name = Pengaduk Kegelapan
-block.returret-explantion.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril
+block.returret-shadow-mixer.name = Pengaduk Kegelapan
+block.returret-shadow-mixer.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing
 
