--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -31,7 +31,7 @@ block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik A
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange] Amunisi Berat
 item.returret-heavy-ammo1.name = Amunisi Berat T1
-item.returret-heavy-ammo1.description = Tingkat 1 Amunisi berat. Meningkatkan kerusakan meriam tingkat dasar
+item.returret-heavy-ammo1.description = Amunisi berat Tingkat 1. Meningkatkan kerusakan meriam tingkat dasar
 
 ## Liquids
 liquid.returret-liquid-mithril.name = Cairan Mithril
