--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -16,6 +16,8 @@ liquid.returret-.description =
 
 # Blocks
 ## Turret
+block.returret-small-gun.name = Senjata Kecil
+block.returret-small-gun.description = Seperti menara Salvo tapi kualitasnya lebih tinggi
 
 ## Extend
 block.returret-ore-mithril.name = Bijih Mithril
