--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -1,4 +1,4 @@
-## Copy paste
+## Salinan (Copy Paste)
 block.returret-.name = 
 block.returret-.description = 
 block.returret-.details = 
@@ -14,27 +14,28 @@ unit.returret-.details =
 liquid.returret-.name = 
 liquid.returret-.description = 
 
-# Blocks
-## Turret
+# Blok (Blocks)
+## Menara (Turret)
 block.returret-small-gun.name = Senjata Kecil
-block.returret-small-gun.description = Seperti menara Salvo tapi kualitasnya lebih tinggi
+block.returret-small-gun.description = Seperti menara Salvo tapi kualitasnya lebih tinggi.
 
-## Extend
+## Editor (Editor)
 block.returret-ore-mithril.name = Bijih Mithril
 
-## Crafting
+## Pabrik (Crafting)
 block.returret-shadow-mixer.name = Pengaduk Kegelapan
-block.returret-shadow-mixer.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril
+block.returret-shadow-mixer.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril.
 block.returret-aft1.name = AFT 1
-block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing
+block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat (1)), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing.
 
-# Other
-## Items
+# Lain-lain (Other)
+## Barang/Benda (Items)
 item.returret-mithril.name = Mithril
-item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange] Amunisi Berat
+item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange] Amunisi Berat.
 item.returret-heavy-ammo1.name = Amunisi Berat T1
-item.returret-heavy-ammo1.description = Amunisi berat Tingkat 1. Meningkatkan kerusakan meriam tingkat dasar
+item.returret-heavy-ammo1.description = Amunisi berat Tingkat 1. Meningkatkan kerusakan meriam tingkat dasar.
 
-## Liquids
+## Cairan (Liquids)
 liquid.returret-liquid-mithril.name = Cairan Mithril
-liquid.returret-liquid-mithril.description = Sebuah pendingin untuk meriam, Energi gelap menambah aura dingin yang menyebabkan cairan menjadi sangat dingin
+liquid.returret-liquid-mithril.description = Sebuah pendingin untuk meriam, Energi gelap menambah aura dingin yang menyebabkan cairan menjadi sangat dingin.
+liquid.returret-liquid-mithril.details = Meskipun begitu tetap tidak lebih dingin dari LEMARI ES
