Update and New content

--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -18,6 +18,8 @@ liquid.returret-.description =
 ## Menara (Turret)
 block.returret-small-gun.name = Senjata Kecil
 block.returret-small-gun.description = Seperti menara Salvo tapi kualitasnya lebih tinggi.
+block.returret-medium-gun.name = Senjata Menengah
+block.returret-medium-gun.description = Menembakan peluru dengan akurasi yang sangat akurat.
 
 ## Editor (Editor)
 block.returret-ore-mithril.name = Bijih Mithril
@@ -27,15 +29,19 @@ block.returret-shadow-mixer.name = Pengaduk Kegelapan
 block.returret-shadow-mixer.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril.
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat (1)), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing.
+block.returret-aft1.name = AFT 2
+block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat (2)), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing.
 
 # Lain-lain (Other)
 ## Barang/Benda (Items)
 item.returret-mithril.name = Mithril
-item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange] Amunisi Berat.
+item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange]Amunisi Berat.
 item.returret-heavy-ammo1.name = Amunisi Berat T1
 item.returret-heavy-ammo1.description = Amunisi berat Tingkat 1. Meningkatkan kerusakan meriam tingkat dasar.
+item.returret-heavy-ammo2.name = Amunisi Berat T2
+item.returret-heavy-ammo2.description = Amunisi berat Tingkat 2. Meningkatkan kerusakan meriam tingkat menengah.
 
 ## Cairan (Liquids)
 liquid.returret-liquid-mithril.name = Cairan Mithril
 liquid.returret-liquid-mithril.description = Sebuah pendingin untuk meriam, Energi gelap menambah aura dingin yang menyebabkan cairan menjadi sangat dingin.
-liquid.returret-liquid-mithril.details = Meskipun begitu tetap tidak lebih dingin dari LEMARI ES
+liquid.returret-liquid-mithril.details = Meski begitu tetap tidak lebih dingin dari LEMARI ES
