--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -43,5 +43,5 @@ item.returret-heavy-ammo2.description = Amunisi berat Tingkat 2. Meningkatkan ke
 
 ## Cairan (Liquids)
 liquid.returret-liquid-mithril.name = Cairan Mithril
-liquid.returret-liquid-mithril.description = Sebuah pendingin untuk meriam, Energi gelap menambah aura dingin yang menyebabkan cairan menjadi sangat dingin.
+liquid.returret-liquid-mithril.description = Sebuah pendingin untuk menara meriam, Energi gelap menambah aura dingin yang menyebabkan cairan menjadi sangat dingin.
 liquid.returret-liquid-mithril.details = Meski begitu tetap tidak lebih dingin dari LEMARI ES
