--- a/bundles/bundle_in_ID.properties
+++ b/bundles/bundle_in_ID.properties
@@ -27,6 +27,10 @@ block.returret-ore-mithril.name = Bijih Mithril
 ## Pabrik (Crafting)
 block.returret-shadow-mixer.name = Pengaduk Kegelapan
 block.returret-shadow-mixer.description = Mencampur Titanium, Mithril dan Air untuk menghasilkan Cairan Mithril.
+block.returret-lava-extractor.name = Ekstraktor Lava
+block.returret-lava-extractor.description = Mengkonversi batuan lava menjadi cairan lava
+
+### AFT
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT singkatan dari Ammo Factory Tier (Pabrik Amunisi Tingkat (1)), Memproduksi sebuah Amunisi (Peluru) dengan Tingkatan masing-masing.
 block.returret-aft2.name = AFT 2
@@ -36,6 +40,10 @@ block.returret-aft2.description = AFT singkatan dari Ammo Factory Tier (Pabrik A
 ## Barang/Benda (Items)
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = Material Gelap untuk membuat Pendingin dan [orange]Amunisi Berat.
+item.returret-lava-stone.name = Batu Magma
+item.returret-lava-stone.description = Batu yang panas
+
+### Amunisi Berat (Heavy Ammo)
 item.returret-heavy-ammo1.name = Amunisi Berat T1
 item.returret-heavy-ammo1.description = Amunisi berat Tingkat 1. Meningkatkan kerusakan meriam tingkat dasar.
 item.returret-heavy-ammo2.name = Amunisi Berat T2
